# croppy

./: .gitignore  .last_build_id  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  pubspec.yaml
.github/workflows/: pages.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/: NOTICES
doc/: doc.md  localization.md  saving-images.md
example/: .metadata  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: custom_cropper.dart  localization_override_example.dart  main.dart  settings_modal.dart
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugins.cmake
hook/: build.dart
ios/: croppy.podspec  croppy_ffi.podspec
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: croppy.dart
lib/src/: src.dart
lib/src/controller/: _controller.dart  croppable_image_controller.dart  cupertino_croppable_image_controller.dart  material_croppable_image_controller.dart
lib/src/ffi/: croppy_ffi.dart  (+1 more)
linux/: CMakeLists.txt
macos/: croppy.podspec  croppy_ffi.podspec
macos/Classes/: croppy.c  croppy_ffi.c  fit_polygon_in_quad.cpp
src/: CMakeLists.txt  croppy.c  croppy.h  croppy_ffi.c  croppy_ffi.h  fit_polygon_in_quad.cpp  fit_polygon_in_quad.h  fit_polygon_in_quad_c_connector.cpp  fit_polygon_in_quad_c_connector.h
test/: croppy_test.dart
windows/: CMakeLists.txt
(+137 files in other folders)
